--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -35,6 +35,36 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
+# MATERIAL DARKER
+background            #212121
+foreground            #e4e4e4
+cursor                #dedede
+selection_background  #dbdbdb
+color0                #212121
+color8                #424242
+color1                #b7141e
+color9                #e83a3f
+color2                #457b23
+color10               #7aba39
+color3                #f5971d
+color11               #fee92e
+color4                #134eb2
+color12               #53a4f3
+color5                #550087
+color13               #a94dbb
+color6                #0e707c
+color14               #26bad1
+color7                #eeeeee
+color15               #d8d8d8
+inactive_border_color   #222222
+active_border_color     #222222
+active_tab_foreground   #D4D4D4
+active_tab_background   #373737
+inactive_tab_foreground #5A5A5A
+inactive_tab_background #262626
+active_tab_font_style   bold-italic
+inactive_tab_font_style normal
+
 ## VSCODE DARK by https://github/mofiqul
 #foreground              #d4d4d4
 #background              #1e1e1e
@@ -175,26 +205,3 @@ strip_trailing_spaces   always
 #color14 #3e953a
 #color7 #bbbbbb
 #color15 #ffffff
-
-# MATERIAL DARKER
-background            #212121
-foreground            #e4e4e4
-cursor                #dedede
-selection_background  #dedede
-color0                #212121
-color8                #424242
-color1                #b7141e
-color9                #e83a3f
-color2                #457b23
-color10               #7aba39
-color3                #f5971d
-color11               #fee92e
-color4                #134eb2
-color12               #53a4f3
-color5                #550087
-color13               #a94dbb
-color6                #0e707c
-color14               #26bad1
-color7                #eeeeee
-color15               #d8d8d8
-selection_foreground  #222221
