--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -35,10 +35,9 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# MATERIAL DARKER
-background            #212121
-foreground            #e4e4e4
-cursor                #dedede
+# VSCODE DARK by https://github/mofiqul
+foreground              #d4d4d4
+background              #1e1e1e
 selection_foreground    #1e1e1e
 selection_background    #d7ba7d
 url_color               #0087BD
@@ -75,9 +74,10 @@ color14  #56b6c2
 color7   #d4d4d4
 color15  #d4d4d4
 
-## VSCODE DARK by https://github/mofiqul
-#foreground              #d4d4d4
-#background              #1e1e1e
+## MATERIAL DARKER
+#background            #212121
+#foreground            #e4e4e4
+#cursor                #dedede
 #selection_foreground    #1e1e1e
 #selection_background    #d7ba7d
 #url_color               #0087BD
@@ -169,49 +169,26 @@ color15  #d4d4d4
 #inactive_tab_background #262626
 #inactive_tab_font_style normal
 ## black
-#color0   #1e1e1e
-#color8   #808080
+#color0                   #1e1e1e
+#color8                   #808080
 ## red
-#color1   #f44747
-#color9   #f44747
+#color1                   #f44747
+#color9                   #f44747
 ## green
-#color2   #608b4e
-#color10  #608b4e
+#color2                   #608b4e
+#color10                  #608b4e
 ## yellow
-#color3   #dcdcaa
-#color11  #dcdcaa
+#color3                   #dcdcaa
+#color11                  #dcdcaa
 ## blue
-#color4  #569cd6
-#color12 #569cd6
+#color4                   #569cd6
+#color12                  #569cd6
 ## magenta
-#color5   #c678dd
-#color13  #c678dd
+#color5                   #c678dd
+#color13                  #c678dd
 ## cyan
-#color6   #56b6c2
-#color14  #56b6c2
+#color6                   #56b6c2
+#color14                  #56b6c2
 ## white
-#color7   #d4d4d4
-#color15  #d4d4d4
-
-## XCODE LIGHT "HIGH CONTRAST"
-#background  #FFFFFF
-#foreground  #000000
-#cursor      #CCCCCC
-#selection_foreground #f8f8f8
-#selection_background #ececec
-#color0 #000000
-#color8 #000000
-#color1 #de3d35
-#color9 #de3d35
-#color2 #3e953a
-#color10 #3e953a
-#color3 #d2b67b
-#color11 #d2b67b
-#color4 #2f5af3
-#color12 #2f5af3
-#color5 #950095
-#color13 #a00095
-#color6 #3e953a
-#color14 #3e953a
-#color7 #bbbbbb
-#color15 #ffffff
+#color7                   #d4d4d4
+#color15                  #d4d4d4
