--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,7 +24,7 @@ cursor_blink_interval   0
 
 # TABS
 tab_bar_style           separator
-tab_separator           "｜"
+tab_separator           ""
 
 # FONT
 font_size               18
