--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,11 +6,11 @@ macos_quit_when_last_window_closed yes
 # WINDOW
 enable_audio_bell       no
 background_opacity      1.0
-hide_window_decorations yes
+hide_window_decorations no
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
-initial_window_height   23c
+initial_window_height   33c
 bell_border_color       #000010
 enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -35,84 +35,84 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-## VSCODE DARK by https://github/mofiqul
-#foreground              #d4d4d4
-#background              #1e1e1e
-#selection_foreground    #1e1e1e
-#selection_background    #d7ba7d
-#url_color               #0087BD
-#inactive_border_color   #222222
-#active_border_color     #222222
-#active_tab_foreground   #D4D4D4
-#active_tab_background   #373737
-#active_tab_font_style   bold-italic
-#inactive_tab_foreground #5A5A5A
-#inactive_tab_background #262626
-#inactive_tab_font_style normal
-## black
-#color0                  #1e1e1e
-#color8                  #808080
-## red
-#color1                  #f44747
-#color9                  #f44747
-## green
-#color2                  #608b4e
-#color10                 #608b4e
-## yellow
-#color3                  #dcdcaa
-#color11                 #dcdcaa
-## blue
-#color4  #               569cd6
-#color12 #               569cd6
-## magenta               
-#color5                  #c678dd
-#color13                 #c678dd
-## cyan
-#color6                  #56b6c2
-#color14                 #56b6c2
-## white
-#color7                  #d4d4d4
-#color15                 #d4d4d4
-
-# MATERIAL DARKER
-background               #212121
-foreground               #e4e4e4
-cursor                   #dedede
-selection_foreground     #1e1e1e
-selection_background     #d7ba7d
-url_color                #0087BD
-inactive_border_color    #222222
-active_border_color      #222222
-active_tab_foreground    #D4D4D4
-active_tab_background    #373737
-active_tab_font_style    bold-italic
-inactive_tab_foreground  #5A5A5A
-inactive_tab_background  #262626
-inactive_tab_font_style  normal
+# VSCODE DARK by https://github/mofiqul
+foreground              #d4d4d4
+background              #1e1e1e
+selection_foreground    #1e1e1e
+selection_background    #d7ba7d
+url_color               #0087BD
+inactive_border_color   #222222
+active_border_color     #222222
+active_tab_foreground   #D4D4D4
+active_tab_background   #373737
+active_tab_font_style   bold-italic
+inactive_tab_foreground #5A5A5A
+inactive_tab_background #262626
+inactive_tab_font_style normal
 # black
-color0                   #1e1e1e
-color8                   #808080
+color0                  #1e1e1e
+color8                  #808080
 # red
-color1                   #f44747
-color9                   #f44747
+color1                  #f44747
+color9                  #f44747
 # green
-color2                   #608b4e
-color10                  #608b4e
+color2                  #608b4e
+color10                 #608b4e
 # yellow
-color3                   #dcdcaa
-color11                  #dcdcaa
+color3                  #dcdcaa
+color11                 #dcdcaa
 # blue
-color4                   #569cd6
-color12                  #569cd6
-# magenta
-color5                   #c678dd
-color13                  #c678dd
+color4                  #569cd6
+color12                 #569cd6
+# magenta 
+color5                  #c678dd
+color13                 #c678dd
 # cyan
-color6                   #56b6c2
-color14                  #56b6c2
+color6                  #56b6c2
+color14                 #56b6c2
 # white
-color7                   #d4d4d4
-color15                  #d4d4d4
+color7                  #d4d4d4
+color15                 #d4d4d4
+
+## MATERIAL DARKER
+#background               #212121
+#foreground               #e4e4e4
+#cursor                   #dedede
+#selection_foreground     #1e1e1e
+#selection_background     #d7ba7d
+#url_color                #0087BD
+#inactive_border_color    #222222
+#active_border_color      #222222
+#active_tab_foreground    #D4D4D4
+#active_tab_background    #373737
+#active_tab_font_style    bold-italic
+#inactive_tab_foreground  #5A5A5A
+#inactive_tab_background  #262626
+#inactive_tab_font_style  normal
+## black
+#color0                   #1e1e1e
+#color8                   #808080
+## red
+#color1                   #f44747
+#color9                   #f44747
+## green
+#color2                   #608b4e
+#color10                  #608b4e
+## yellow
+#color3                   #dcdcaa
+#color11                  #dcdcaa
+## blue
+#color4                   #569cd6
+#color12                  #569cd6
+## magenta
+#color5                   #c678dd
+#color13                  #c678dd
+## cyan
+#color6                   #56b6c2
+#color14                  #56b6c2
+## white
+#color7                   #d4d4d4
+#color15                  #d4d4d4
 
 ## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
 #cursor                  #fbf1c7
