--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -35,84 +35,84 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-# VSCODE DARK by https://github/mofiqul
-foreground              #d4d4d4
-background              #1e1e1e
-selection_foreground    #1e1e1e
-selection_background    #d7ba7d
-url_color               #0087BD
-inactive_border_color   #222222
-active_border_color     #222222
-active_tab_foreground   #D4D4D4
-active_tab_background   #373737
-active_tab_font_style   bold-italic
-inactive_tab_foreground #5A5A5A
-inactive_tab_background #262626
-inactive_tab_font_style normal
-# black
-color0                  #1e1e1e
-color8                  #808080
-# red
-color1                  #f44747
-color9                  #f44747
-# green
-color2                  #608b4e
-color10                 #608b4e
-# yellow
-color3                  #dcdcaa
-color11                 #dcdcaa
-# blue
-color4                  #569cd6
-color12                 #569cd6
-# magenta 
-color5                  #c678dd
-color13                 #c678dd
-# cyan
-color6                  #56b6c2
-color14                 #56b6c2
-# white
-color7                  #d4d4d4
-color15                 #d4d4d4
-
-## MATERIAL DARKER
-#background               #212121
-#foreground               #e4e4e4
-#cursor                   #dedede
-#selection_foreground     #1e1e1e
-#selection_background     #d7ba7d
-#url_color                #0087BD
-#inactive_border_color    #222222
-#active_border_color      #222222
-#active_tab_foreground    #D4D4D4
-#active_tab_background    #373737
-#active_tab_font_style    bold-italic
-#inactive_tab_foreground  #5A5A5A
-#inactive_tab_background  #262626
-#inactive_tab_font_style  normal
+## VSCODE DARK by https://github/mofiqul
+#foreground              #d4d4d4
+#background              #1e1e1e
+#selection_foreground    #1e1e1e
+#selection_background    #d7ba7d
+#url_color               #0087BD
+#inactive_border_color   #222222
+#active_border_color     #222222
+#active_tab_foreground   #D4D4D4
+#active_tab_background   #373737
+#active_tab_font_style   bold-italic
+#inactive_tab_foreground #5A5A5A
+#inactive_tab_background #262626
+#inactive_tab_font_style normal
 ## black
-#color0                   #1e1e1e
-#color8                   #808080
+#color0                  #1e1e1e
+#color8                  #808080
 ## red
-#color1                   #f44747
-#color9                   #f44747
+#color1                  #f44747
+#color9                  #f44747
 ## green
-#color2                   #608b4e
-#color10                  #608b4e
+#color2                  #608b4e
+#color10                 #608b4e
 ## yellow
-#color3                   #dcdcaa
-#color11                  #dcdcaa
+#color3                  #dcdcaa
+#color11                 #dcdcaa
 ## blue
-#color4                   #569cd6
-#color12                  #569cd6
-## magenta
-#color5                   #c678dd
-#color13                  #c678dd
+#color4                  #569cd6
+#color12                 #569cd6
+## magenta 
+#color5                  #c678dd
+#color13                 #c678dd
 ## cyan
-#color6                   #56b6c2
-#color14                  #56b6c2
+#color6                  #56b6c2
+#color14                 #56b6c2
 ## white
-#color7                   #d4d4d4
-#color15                  #d4d4d4
+#color7                  #d4d4d4
+#color15                 #d4d4d4
+
+# MATERIAL DARKER
+background               #212121
+foreground               #e4e4e4
+cursor                   #dedede
+selection_foreground     #1e1e1e
+selection_background     #d7ba7d
+url_color                #0087BD
+inactive_border_color    #222222
+active_border_color      #222222
+active_tab_foreground    #D4D4D4
+active_tab_background    #373737
+active_tab_font_style    bold-italic
+inactive_tab_foreground  #5A5A5A
+inactive_tab_background  #262626
+inactive_tab_font_style  normal
+# black
+color0                   #1e1e1e
+color8                   #808080
+# red
+color1                   #f44747
+color9                   #f44747
+# green
+color2                   #608b4e
+color10                  #608b4e
+# yellow
+color3                   #dcdcaa
+color11                  #dcdcaa
+# blue
+color4                   #569cd6
+color12                  #569cd6
+# magenta
+color5                   #c678dd
+color13                  #c678dd
+# cyan
+color6                   #56b6c2
+color14                  #56b6c2
+# white
+color7                   #d4d4d4
+color15                  #d4d4d4
 
 ## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
 #cursor                  #fbf1c7
@@ -187,8 +187,31 @@ color15                 #d4d4d4
 #color5                   #c678dd
 #color13                  #c678dd
 ## cyan
-#color6                   #56b6c2
-#color14                  #56b6c2
-## white
-#color7                   #d4d4d4
-#color15                  #d4d4d4
+
+# LIGHT THEME
+#background #f8f8f8
+#foreground #2a2b33
+#cursor #bbbbbb
+#selection_background #ececec
+#color0 #000000
+#color8 #000000
+#color1 #de3d35
+#color9 #de3d35
+#color2 #3e953a
+#color10 #3e953a
+#color3 #d2b67b
+#color11 #d2b67b
+#color4 #2f5af3
+#color12 #2f5af3
+#color5 #950095
+#color13 #a00095
+#color6 #3e953a
+#color14 #3e953a
+#color7 #bbbbbb
+#color15 #ffffff
+#selection_foreground #f8f8f8
+##color6                   #56b6c2
+##color14                  #56b6c2
+### white
+##color7                   #d4d4d4
+##color15                  #d4d4d4
