--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
 initial_window_width    85c
-initial_window_height   27c
+initial_window_height   36c
 bell_border_color       #000010
 enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -27,8 +27,8 @@ tab_bar_style           separator
 tab_separator           ""
 
 # FONT
-font_size               21
-font_family             JetBrains Mono
+font_size               16
+font_family             Hack
 
 # CLIPBOARD
 detect_urls             yes
