--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,8 +27,9 @@ tab_bar_style           separator
 tab_separator           ""
 
 # FONT
-font_size               16
+font_size               18
 font_family             Hack
+bold_font               Hack Bold
 
 # CLIPBOARD
 detect_urls             yes
