--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,7 +5,7 @@ macos_quit_when_last_window_closed yes
 
 # WINDOW
 enable_audio_bell       no
-background_opacity      1.0
+background_opacity      0.85
 hide_window_decorations yes
 window_padding_width    0
 remember_window_size    no
@@ -28,8 +28,7 @@ tab_separator           ""
 
 # FONT
 font_size               18
-font_family             Hack
-bold_font               Hack Bold
+font_family             JetBrains Mono
 
 # CLIPBOARD
 detect_urls             yes
