--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lua-language-server"]
 	path = lua-language-server
 	url = https://github.com/sumneko/lua-language-server
+[submodule "nvim"]
+	path = nvim
+	url = https://github.com/astrlux/nvim
