--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -27,8 +27,8 @@ tab_bar_style           separator
 tab_separator           ""
 
 # FONT
-font_size               21
-font_family             Tamzen
+font_size               20
+font_family             Roboto Mono
 
 # CLIPBOARD
 detect_urls             yes
