--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -24,7 +24,7 @@ cursor_blink_interval   0
 
 # TABS
 tab_bar_style           separator
-tab_separator           ""
+tab_separator           "|"
 
 # FONT
 font_size               20
@@ -43,7 +43,7 @@ selection_background    #d7ba7d
 url_color               #0087BD
 inactive_border_color   #222222
 active_border_color     #222222
-active_tab_foreground   #D4D4D4
+active_tab_foreground   #d4d4d4
 active_tab_background   #373737
 active_tab_font_style   bold-italic
 inactive_tab_foreground #5A5A5A
