--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,78 +1,39 @@
 # MacOS TWEAKS
-macos_thicken_font      0.3
+macos_thicken_font      0.2
 map ctrl+shift+enter    new_window_with_cwd
 macos_quit_when_last_window_closed yes
 
 # WINDOW
 enable_audio_bell       no
-background_opacity      1.0
+background_opacity      0.965
 hide_window_decorations yes
 window_padding_width    0
-remember_window_size    no
-initial_window_width    85c
+remember_window_size    yes
+initial_window_width    81c
 initial_window_height   36c
 bell_border_color       #000010
 enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
-scrollback_lines        2000
-mouse_hide_wait         0.1
+scrollback_lines        900
+mouse_hide_wait         0.01
 
 # EDITOR
 editor                  nvim
-input_delay             3
-cursor_blink_interval   0
+input_delay             2
+cursor_blink_interval   0.27
 
 # TABS
 tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               20
+font_size               18
 font_family             Roboto Mono
 
 # CLIPBOARD
 detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
-
-# VSCODE DARK by https://github/mofiqul
-foreground              #d4d4d4
-background              #1e1e1e
-selection_foreground    #1e1e1e
-selection_background    #d7ba7d
-url_color               #0087BD
-inactive_border_color   #222222
-active_border_color     #222222
-active_tab_foreground   #d4d4d4
-active_tab_background   #373737
-active_tab_font_style   bold-italic
-inactive_tab_foreground #5A5A5A
-inactive_tab_background #262626
-inactive_tab_font_style normal
-# black
-color0                  #1e1e1e
-color8                  #808080
-# red
-color1                  #f44747
-color9                  #f44747
-# green
-color2                  #608b4e
-color10                 #608b4e
-# yellow
-color3                  #dcdcaa
-color11                 #dcdcaa
-# blue
-color4                  #569cd6
-color12                 #569cd6
-# magenta 
-color5                  #c678dd
-color13                 #c678dd
-# cyan
-color6                  #56b6c2
-color14                 #56b6c2
-# white
-color7                  #d4d4d4
-color15                 #d4d4d4
 
 ## MATERIAL DARKER
 #background               #212121
@@ -215,3 +176,43 @@ color15                 #d4d4d4
 ### white
 ##color7                   #d4d4d4
 ##color15                  #d4d4d4
+
+# VSCODE DARK by https://github/mofiqul
+foreground              #d4d4d4
+background              #1e1e1e
+selection_foreground    #ffffff
+selection_background    #0C3953
+url_color               #0087BD
+active_border_color     #333333
+active_tab_foreground   #ffffff
+active_tab_background   #373737
+active_tab_font_style   bold-italic
+inactive_border_color   #333333
+inactive_tab_foreground #5A5A5A
+inactive_tab_background #262626
+inactive_tab_font_style normal
+# black
+color0                  #1e1e1e
+color8                  #808080
+# red
+color1                  #f44747
+color9                  #f44747
+# green
+color2                  #608b4e
+color10                 #608b4e
+# yellow
+color3                  #dcdcaa
+color11                 #dcdcaa
+# blue
+color4                  #569cd6
+color12                 #569cd6
+# magenta 
+color5                  #c678dd
+color13                 #c678dd
+# cyan
+color6                  #56b6c2
+color14                 #56b6c2
+# white
+color7                  #d4d4d4
+color15                 #d4d4d4
+
