--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -16,6 +16,7 @@ enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
 mouse_hide_wait         0.01
+shell_integration       disabled
 
 # EDITOR
 editor                  nvim
