--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,14 +1,14 @@
 # MacOS TWEAKS
-macos_thicken_font      0.2
-map ctrl+shift+enter    new_window_with_cwd
+macos_thicken_font      0.27
 macos_quit_when_last_window_closed yes
 
 # WINDOW
+map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
 background_opacity      1.0
 hide_window_decorations yes
 window_padding_width    0
-remember_window_size    yes
+remember_window_size    no
 initial_window_width    81c
 initial_window_height   36c
 bell_border_color       #000010
@@ -16,12 +16,12 @@ enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
 mouse_hide_wait         0.01
-shell_integration       disabled
 
 # EDITOR
 editor                  nvim
 input_delay             2
-cursor_blink_interval   0.27
+#cursor_blink_interval   0.27
+#shell_integration       no-cursor
 
 # TABS
 tab_bar_style           separator
