--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,7 +29,7 @@ tab_separator           "|"
 
 # FONT
 font_size               18
-font_family             Ubunto Mono
+font_family             IBM Plex Mono
 
 # CLIPBOARD
 detect_urls             yes
@@ -178,42 +178,69 @@ strip_trailing_spaces   always
 ##color7                   #d4d4d4
 ##color15                  #d4d4d4
 
-# VSCODE DARK by https://github/mofiqul
-foreground              #d4d4d4
-background              #1e1e1e
-selection_foreground    #ffffff
-selection_background    #0C3953
-url_color               #0087BD
-active_border_color     #333333
-active_tab_foreground   #ffffff
-active_tab_background   #373737
-active_tab_font_style   bold-italic
-inactive_border_color   #333333
-inactive_tab_foreground #5A5A5A
-inactive_tab_background #262626
-inactive_tab_font_style normal
-# black
-color0                  #1e1e1e
-color8                  #808080
-# red
-color1                  #f44747
-color9                  #f44747
-# green
-color2                  #608b4e
-color10                 #608b4e
-# yellow
-color3                  #dcdcaa
-color11                 #dcdcaa
-# blue
-color4                  #569cd6
-color12                 #569cd6
-# magenta 
-color5                  #c678dd
-color13                 #c678dd
-# cyan
-color6                  #56b6c2
-color14                 #56b6c2
-# white
-color7                  #d4d4d4
-color15                 #d4d4d4
+## VSCODE DARK by https://github/mofiqul
+#foreground              #d4d4d4
+#background              #1e1e1e
+#selection_foreground    #ffffff
+#selection_background    #0C3953
+#url_color               #0087BD
+#active_border_color     #222222
+#active_tab_foreground   #ffffff
+#active_tab_background   #373737
+#active_tab_font_style   bold-italic
+#inactive_border_color   #222222
+#inactive_tab_foreground #5A5A5A
+#inactive_tab_background #262626
+#inactive_tab_font_style normal
+## black
+#color0                  #1e1e1e
+#color8                  #808080
+## red
+#color1                  #f44747
+#color9                  #f44747
+## green
+#color2                  #608b4e
+#color10                 #608b4e
+## yellow
+#color3                  #dcdcaa
+#color11                 #dcdcaa
+## blue
+#color4                  #569cd6
+#color12                 #569cd6
+## magenta 
+#color5                  #c678dd
+#color13                 #c678dd
+## cyan
+#color6                  #56b6c2
+#color14                 #56b6c2
+## white
+#color7                  #d4d4d4
+#color15                 #d4d4d4
 
+background #F4F0ED
+foreground #6B5C4D
+cursor     #6B5C4D
+url_color  #485F84
+selection_background    #DED2C8
+selection_foreground    #6B5C4D
+tab_bar_background      #E9E1DB
+active_tab_background   #E9E1DB
+active_tab_foreground   #C29830
+inactive_tab_background #E9E1DB
+inactive_tab_foreground #867462
+color0  #E9E1DB
+color1  #D7898C
+color2  #83B887
+color3  #C29830
+color4  #485F84
+color5  #BE79BB
+color6  #729893
+color7  #A38D78
+color8  #DED2C8
+color9  #C65333
+color10 #659E69
+color11 #C29830
+color12 #485F84
+color13 #854882
+color14 #436460
+color15 #867462
