--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.27
+macos_thicken_font      0.4
 macos_quit_when_last_window_closed yes
 
 # WINDOW
@@ -28,7 +28,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               18
+font_size               16
 font_family             IBM Plex Mono
 
 # CLIPBOARD
@@ -217,30 +217,60 @@ strip_trailing_spaces   always
 #color7                  #d4d4d4
 #color15                 #d4d4d4
 
-background #F4F0ED
-foreground #6B5C4D
-cursor     #6B5C4D
-url_color  #485F84
-selection_background    #DED2C8
-selection_foreground    #6B5C4D
-tab_bar_background      #E9E1DB
-active_tab_background   #E9E1DB
-active_tab_foreground   #C29830
-inactive_tab_background #E9E1DB
-inactive_tab_foreground #867462
-color0  #E9E1DB
-color1  #D7898C
-color2  #83B887
-color3  #C29830
-color4  #485F84
-color5  #BE79BB
-color6  #729893
+## MELANGE LIGHT
+#background #F4F0ED
+#foreground #6B5C4D
+#cursor     #6B5C4D
+#url_color  #485F84
+#selection_background    #DED2C8
+#selection_foreground    #6B5C4D
+#tab_bar_background      #E9E1DB
+#active_tab_background   #E9E1DB
+#active_tab_foreground   #C29830
+#inactive_tab_background #E9E1DB
+#inactive_tab_foreground #867462
+#color0  #E9E1DB
+#color1  #D7898C
+#color2  #83B887
+#color3  #C29830
+#color4  #485F84
+#color5  #BE79BB
+#color6  #729893
+#color7  #A38D78
+#color8  #DED2C8
+#color9  #C65333
+#color10 #659E69
+#color11 #C29830
+#color12 #485F84
+#color13 #854882
+#color14 #436460
+#color15 #867462
+
+# MELANGE DARK
+background #2A2520
+foreground #ECE1D7
+cursor     #ECE1D7
+url_color  #9AACCE
+selection_background    #4D453E
+selection_foreground    #ECE1D7
+tab_bar_background      #352F2A
+active_tab_background   #352F2A
+active_tab_foreground   #EBC06D
+inactive_tab_background #352F2A
+inactive_tab_foreground #C1A78E
+color0  #352F2A
+color1  #B65C60
+color2  #78997A
+color3  #EBC06D
+color4  #9AACCE
+color5  #B380B0
+color6  #86A3A3
 color7  #A38D78
-color8  #DED2C8
-color9  #C65333
-color10 #659E69
-color11 #C29830
-color12 #485F84
-color13 #854882
-color14 #436460
-color15 #867462
+color8  #4D453E
+color9  #F17C64
+color10 #99D59D
+color11 #EBC06D
+color12 #9AACCE
+color13 #CE9BCB
+color14 #88B3B2
+color15 #C1A78E
