--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,8 +28,8 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               26
-font_family             IBM Plex Mono
+font_size               22
+font_family             Ubuntu Mono
 
 # CLIPBOARD
 detect_urls             yes
