--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,15 +20,15 @@ mouse_hide_wait         0.01
 # EDITOR
 editor                  nvim
 input_delay             2
-#cursor_blink_interval   0.27
-#shell_integration       no-cursor
+cursor_blink_interval   0.27
+shell_integration       no-cursor
 
 # TABS
 tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               22
+font_size               24
 font_family             Ubuntu Mono
 
 # CLIPBOARD
