--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.4
+macos_thicken_font      0.2
 macos_quit_when_last_window_closed yes
 
 # WINDOW
@@ -246,31 +246,73 @@ strip_trailing_spaces   always
 #color14 #436460
 #color15 #867462
 
-# MELANGE DARK
-background #2A2520
-foreground #ECE1D7
-cursor     #ECE1D7
-url_color  #9AACCE
-selection_background    #4D453E
-selection_foreground    #ECE1D7
-tab_bar_background      #352F2A
-active_tab_background   #352F2A
-active_tab_foreground   #EBC06D
-inactive_tab_background #352F2A
-inactive_tab_foreground #C1A78E
-color0  #352F2A
-color1  #B65C60
-color2  #78997A
-color3  #EBC06D
-color4  #9AACCE
-color5  #B380B0
-color6  #86A3A3
-color7  #A38D78
-color8  #4D453E
-color9  #F17C64
-color10 #99D59D
-color11 #EBC06D
-color12 #9AACCE
-color13 #CE9BCB
-color14 #88B3B2
-color15 #C1A78E
+## MELANGE DARK
+#background #2A2520
+#foreground #ECE1D7
+#cursor     #ECE1D7
+#url_color  #9AACCE
+#selection_background    #4D453E
+#selection_foreground    #ECE1D7
+#tab_bar_background      #352F2A
+#active_tab_background   #352F2A
+#active_tab_foreground   #EBC06D
+#inactive_tab_background #352F2A
+#inactive_tab_foreground #C1A78E
+#color0  #352F2A
+#color1  #B65C60
+#color2  #78997A
+#color3  #EBC06D
+#color4  #9AACCE
+#color5  #B380B0
+#color6  #86A3A3
+#color7  #A38D78
+#color8  #4D453E
+#color9  #F17C64
+#color10 #99D59D
+#color11 #EBC06D
+#color12 #9AACCE
+#color13 #CE9BCB
+#color14 #88B3B2
+#color15 #C1A78E
+
+# DRACULA
+foreground            #f8f8f2
+background            #282a36
+selection_foreground  #ffffff
+selection_background  #44475a
+url_color #8be9fd
+# black
+color0  #21222c
+color8  #6272a4
+# red
+color1  #ff5555
+color9  #ff6e6e
+# green
+color2  #50fa7b
+color10 #69ff94
+# yellow
+color3  #f1fa8c
+color11 #ffffa5
+# blue
+color4  #bd93f9
+color12 #d6acff
+# magenta
+color5  #ff79c6
+color13 #ff92df
+# cyan
+color6  #8be9fd
+color14 #a4ffff
+# white
+color7  #f8f8f2
+color15 #ffffff
+# Cursor colors
+cursor            #f8f8f2
+cursor_text_color background
+# Tab bar colors
+active_tab_foreground   #282a36
+active_tab_background   #f8f8f2
+inactive_tab_foreground #282a36
+inactive_tab_background #6272a4
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
