--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -36,45 +36,45 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-## MATERIAL DARKER
-#background               #212121
-#foreground               #e4e4e4
-#cursor                   #dedede
-#selection_foreground     #1e1e1e
-#selection_background     #d7ba7d
-#url_color                #0087BD
-#inactive_border_color    #222222
-#active_border_color      #222222
-#active_tab_foreground    #D4D4D4
-#active_tab_background    #373737
-#active_tab_font_style    bold-italic
-#inactive_tab_foreground  #5A5A5A
-#inactive_tab_background  #262626
-#inactive_tab_font_style  normal
-## black
-#color0                   #1e1e1e
-#color8                   #808080
-## red
-#color1                   #f44747
-#color9                   #f44747
-## green
-#color2                   #608b4e
-#color10                  #608b4e
-## yellow
-#color3                   #dcdcaa
-#color11                  #dcdcaa
-## blue
-#color4                   #569cd6
-#color12                  #569cd6
-## magenta
-#color5                   #c678dd
-#color13                  #c678dd
-## cyan
-#color6                   #56b6c2
-#color14                  #56b6c2
-## white
-#color7                   #d4d4d4
-#color15                  #d4d4d4
+# MATERIAL DARKER
+background               #212121
+foreground               #e4e4e4
+cursor                   #dedede
+selection_foreground     #1e1e1e
+selection_background     #d7ba7d
+url_color                #0087BD
+inactive_border_color    #222222
+active_border_color      #222222
+active_tab_foreground    #D4D4D4
+active_tab_background    #373737
+active_tab_font_style    bold-italic
+inactive_tab_foreground  #5A5A5A
+inactive_tab_background  #262626
+inactive_tab_font_style  normal
+# black
+color0                   #1e1e1e
+color8                   #808080
+# red
+color1                   #f44747
+color9                   #f44747
+# green
+color2                   #608b4e
+color10                  #608b4e
+# yellow
+color3                   #dcdcaa
+color11                  #dcdcaa
+# blue
+color4                   #569cd6
+color12                  #569cd6
+# magenta
+color5                   #c678dd
+color13                  #c678dd
+# cyan
+color6                   #56b6c2
+color14                  #56b6c2
+# white
+color7                   #d4d4d4
+color15                  #d4d4d4
 
 ## GRUVBOX by morhetz@gmail.com, adapted by witekdomitrz@gmail.com
 #cursor                  #fbf1c7
@@ -275,44 +275,66 @@ strip_trailing_spaces   always
 #color14 #88B3B2
 #color15 #C1A78E
 
-# DRACULA
-foreground            #f8f8f2
-background            #282a36
-selection_foreground  #ffffff
-selection_background  #44475a
-url_color #8be9fd
-# black
-color0  #21222c
-color8  #6272a4
-# red
-color1  #ff5555
-color9  #ff6e6e
-# green
-color2  #50fa7b
-color10 #69ff94
-# yellow
-color3  #f1fa8c
-color11 #ffffa5
-# blue
-color4  #bd93f9
-color12 #d6acff
-# magenta
-color5  #ff79c6
-color13 #ff92df
-# cyan
-color6  #8be9fd
-color14 #a4ffff
-# white
-color7  #f8f8f2
+## DRACULA
+#foreground            #f8f8f2
+#background            #282a36
+#selection_foreground  #ffffff
+#selection_background  #44475a
+#url_color #8be9fd
+## black
+#color0  #21222c
+#color8  #6272a4
+## red
+#color1  #ff5555
+#color9  #ff6e6e
+## green
+#color2  #50fa7b
+#color10 #69ff94
+## yellow
+#color3  #f1fa8c
+#color11 #ffffa5
+## blue
+#color4  #bd93f9
+#color12 #d6acff
+## magenta
+#color5  #ff79c6
+#color13 #ff92df
+## cyan
+#color6  #8be9fd
+#color14 #a4ffff
+## white
+#color7  #f8f8f2
+#color15 #ffffff
+## Cursor colors
+#cursor            #f8f8f2
+#cursor_text_color background
+## Tab bar colors
+#active_tab_foreground   #282a36
+#active_tab_background   #f8f8f2
+#inactive_tab_foreground #282a36
+#inactive_tab_background #6272a4
+## Marks
+#mark1_foreground #282a36
+#mark1_background #ff5555
+
+background #111111
+foreground #dedede
+cursor #f8f8f2
+selection_background #464d91
+color0 #919191
+color8 #bdbdbd
+color1 #e17373
+color9 #ffa0a0
+color2 #94b978
+color10 #bddeab
+color3 #ffb97b
+color11 #ffdba0
+color4 #96bddb
+color12 #b1d7f6
+color5 #e1c0fa
+color13 #fbdaff
+color6 #00988e
+color14 #19b2a7
+color7 #dedede
 color15 #ffffff
-# Cursor colors
-cursor            #f8f8f2
-cursor_text_color background
-# Tab bar colors
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
-# Marks
-mark1_foreground #282a36
-mark1_background #ff5555
+selection_foreground #111111
