--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -317,8 +317,8 @@ color15                  #d4d4d4
 #mark1_foreground #282a36
 #mark1_background #ff5555
 
-background #111111
-foreground #dedede
+background #141414
+foreground #fff7eb
 cursor #f8f8f2
 selection_background #464d91
 color0 #919191
