--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,7 +28,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               20
+font_size               18
 font_family             Ubuntu Mono
 
 # CLIPBOARD
@@ -320,7 +320,8 @@ color15                  #d4d4d4
 background #141414
 foreground #fff7eb
 cursor #f8f8f2
-selection_background #464d91
+selection_foreground #ffffff
+selection_background #0C3953
 color0 #919191
 color8 #bdbdbd
 color1 #e17373
@@ -337,4 +338,3 @@ color6 #00988e
 color14 #19b2a7
 color7 #dedede
 color15 #ffffff
-selection_foreground #111111
