--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -318,7 +318,7 @@ color15                  #d4d4d4
 #mark1_background #ff5555
 
 background #141414
-foreground #fff7eb
+foreground #FFFFE0
 cursor #f8f8f2
 selection_foreground #ffffff
 selection_background #0C3953
