--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -319,7 +319,7 @@ color15                  #d4d4d4
 
 background #141414
 foreground #FFFFE0
-cursor #f8f8f2
+cursor #FFFFE0
 selection_foreground #ffffff
 selection_background #0C3953
 color0 #919191
