--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
 background_opacity      1.0
 window_padding_width    0
-remember_window_size    no
+remember_window_size    yes
 initial_window_width    108c
 initial_window_height   36c
 bell_border_color       #000010
@@ -28,8 +28,8 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               17
-font_family             JetBrains Mono
+font_size               20
+font_family             Ubuntu Mono
 
 # CLIPBOARD
 detect_urls             yes
@@ -317,8 +317,8 @@ strip_trailing_spaces   always
 #mark1_foreground #282a36
 #mark1_background #ff5555
 
-background #141414
-foreground #FFFFE0
+background #111111
+foreground #afafaf
 cursor #FFFFE0
 selection_foreground #ffffff
 selection_background #0C3953
