--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
 background_opacity      1.0
 window_padding_width    0
-remember_window_size    yes
+remember_window_size    no
 initial_window_width    108c
 initial_window_height   36c
 bell_border_color       #000010
@@ -317,8 +317,8 @@ strip_trailing_spaces   always
 #mark1_foreground #282a36
 #mark1_background #ff5555
 
-background #111111
-foreground #afafaf
+background #141414
+foreground #FFFFE0
 cursor #FFFFE0
 selection_foreground #ffffff
 selection_background #0C3953
