--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -178,44 +178,44 @@ strip_trailing_spaces   always
 ##color7                   #d4d4d4
 ##color15                  #d4d4d4
 
-## VSCODE DARK by https://github/mofiqul
-#foreground              #d4d4d4
-#background              #1e1e1e
-#selection_foreground    #ffffff
-#selection_background    #0C3953
-#url_color               #0087BD
-#active_border_color     #222222
-#active_tab_foreground   #ffffff
-#active_tab_background   #373737
-#active_tab_font_style   bold-italic
-#inactive_border_color   #222222
-#inactive_tab_foreground #5A5A5A
-#inactive_tab_background #262626
-#inactive_tab_font_style normal
-## black
-#color0                  #1e1e1e
-#color8                  #808080
-## red
-#color1                  #f44747
-#color9                  #f44747
-## green
-#color2                  #608b4e
-#color10                 #608b4e
-## yellow
-#color3                  #dcdcaa
-#color11                 #dcdcaa
-## blue
-#color4                  #569cd6
-#color12                 #569cd6
-## magenta 
-#color5                  #c678dd
-#color13                 #c678dd
-## cyan
-#color6                  #56b6c2
-#color14                 #56b6c2
-## white
-#color7                  #d4d4d4
-#color15                 #d4d4d4
+# VSCODE DARK by https://github/mofiqul
+foreground              #d4d4d4
+background              #1e1e1e
+selection_foreground    #ffffff
+selection_background    #0C3953
+url_color               #0087BD
+active_border_color     #222222
+active_tab_foreground   #ffffff
+active_tab_background   #373737
+active_tab_font_style   bold-italic
+inactive_border_color   #222222
+inactive_tab_foreground #5A5A5A
+inactive_tab_background #262626
+inactive_tab_font_style normal
+# black
+color0                  #1e1e1e
+color8                  #808080
+# red
+color1                  #f44747
+color9                  #f44747
+# green
+color2                  #608b4e
+color10                 #608b4e
+# yellow
+color3                  #dcdcaa
+color11                 #dcdcaa
+# blue
+color4                  #569cd6
+color12                 #569cd6
+# magenta 
+color5                  #c678dd
+color13                 #c678dd
+# cyan
+color6                  #56b6c2
+color14                 #56b6c2
+# white
+color7                  #d4d4d4
+color15                 #d4d4d4
 
 ## MELANGE LIGHT
 #background #F4F0ED
@@ -317,24 +317,25 @@ strip_trailing_spaces   always
 #mark1_foreground #282a36
 #mark1_background #ff5555
 
-background #141414
-foreground #FFFFE0
-cursor #FFFFE0
-selection_foreground #ffffff
-selection_background #0C3953
-color0 #919191
-color8 #bdbdbd
-color1 #e17373
-color9 #ffa0a0
-color2 #94b978
-color10 #bddeab
-color3 #ffb97b
-color11 #ffdba0
-color4 #96bddb
-color12 #b1d7f6
-color5 #e1c0fa
-color13 #fbdaff
-color6 #00988e
-color14 #19b2a7
-color7 #dedede
-color15 #ffffff
+# JELLYBEANS
+#background #141414
+#foreground #FFFFE0
+#cursor #FFFFE0
+#selection_foreground #ffffff
+#selection_background #0C3953
+#color0 #919191
+#color8 #bdbdbd
+#color1 #e17373
+#color9 #ffa0a0
+#color2 #94b978
+#color10 #bddeab
+#color3 #ffb97b
+#color11 #ffdba0
+#color4 #96bddb
+#color12 #b1d7f6
+#color5 #e1c0fa
+#color13 #fbdaff
+#color6 #00988e
+#color14 #19b2a7
+#color7 #dedede
+#color15 #ffffff
