--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
 background_opacity      1.0
 window_padding_width    0
-remember_window_size    no
+remember_window_size    yes
 initial_window_width    81c
 initial_window_height   24c
 bell_border_color       #000010
@@ -20,8 +20,8 @@ mouse_hide_wait         0.01
 # EDITOR
 editor                  nvim
 input_delay             2
-cursor_blink_interval   0.27
 shell_integration       no-cursor
+cursor_blink_interval   0
 
 # TABS
 tab_bar_style           separator
@@ -340,4 +340,5 @@ strip_trailing_spaces   always
 #color7 #dedede
 #color15 #ffffff
 
-cursor  #ffffff
+cursor      #ffffff
+background  #101010
