--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -21,15 +21,15 @@ mouse_hide_wait         0.01
 editor                  nvim
 input_delay             2
 shell_integration       no-cursor
-cursor_blink_interval   0
+cursor_blink_interval   0.23
 
 # TABS
 tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               17
-font_family             JetBrains Mono
+font_size               22
+font_family             Ubuntu Mono
 
 # CLIPBOARD
 detect_urls             yes
@@ -340,5 +340,5 @@ strip_trailing_spaces   always
 #color7 #dedede
 #color15 #ffffff
 
-cursor      #ffffff
+cursor      #FFFFFF
 background  #101010
