--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -8,7 +8,7 @@ map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
 background_opacity      1.0
 window_padding_width    0
-remember_window_size    yes
+remember_window_size    no
 initial_window_width    81c
 initial_window_height   24c
 bell_border_color       #000010
@@ -21,15 +21,15 @@ mouse_hide_wait         0.01
 editor                  nvim
 input_delay             2
 shell_integration       no-cursor
-cursor_blink_interval   0.23
+cursor_blink_interval   0.0
 
 # TABS
 tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               22
-font_family             Ubuntu Mono
+font_size               19
+font_family             JetBrains Mono
 
 # CLIPBOARD
 detect_urls             yes
