--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@ hide_window_decorations yes
 # WINDOW
 map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
-background_opacity      0.84
+background_opacity      1.0
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
@@ -28,8 +28,8 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               19
-font_family             JetBrains Mono
+font_size               22
+font_family             Ubuntu Mono
 
 # CLIPBOARD
 detect_urls             yes
