--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,8 +28,8 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               18
-font_family             JetBrains Mono
+font_size               20
+font_family             Ubuntu Mono
 
 # CLIPBOARD
 detect_urls             yes
@@ -114,3 +114,5 @@ strip_trailing_spaces   always
 ## white
 #color7                  #d4d4d4
 #color15                 #d4d4d4
+
+cursor #FFFFFF
