--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,8 +28,8 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               20
-font_family             Ubuntu Mono
+font_size               18
+font_family             JetBrains Mono
 
 # CLIPBOARD
 detect_urls             yes
