--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ background_opacity      1.0
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
-initial_window_height   24c
+initial_window_height   40c
 bell_border_color       #000010
 enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -29,7 +29,7 @@ tab_separator           "|"
 
 # FONT
 font_size               18
-font_family             JetBrains Mono
+font_family             IBM Plex Mono
 
 # CLIPBOARD
 detect_urls             yes
@@ -116,3 +116,5 @@ strip_trailing_spaces   always
 #color15                 #d4d4d4
 
 cursor #FFFFFF
+active_border_color     #222222
+inactive_border_color     #222222
