--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.2
+#macos_thicken_font      0.2
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
