--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -115,6 +115,7 @@ strip_trailing_spaces   always
 #color7                  #d4d4d4
 #color15                 #d4d4d4
 
-cursor #FFFFFF
+cursor                  #FFFFFF
+background              #101010
 active_border_color     #222222
-inactive_border_color     #222222
+inactive_border_color   #222222
