--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -20,7 +20,7 @@ mouse_hide_wait         0.01
 # EDITOR
 editor                  nvim
 input_delay             2
-shell_integration       no-cursor
+#shell_integration       no-cursor
 cursor_blink_interval   0.0
 
 # TABS
