--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-#macos_thicken_font      0.3
+macos_thicken_font      0.3
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
@@ -28,7 +28,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               14
+font_size               16
 font_family             IBM Plex Mono
 
 # CLIPBOARD
