--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.3
+#macos_thicken_font      0.3
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
@@ -10,7 +10,7 @@ background_opacity      1.0
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
-initial_window_height   40c
+initial_window_height   27c
 bell_border_color       #000010
 enabled_layouts fat:bias=72;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
@@ -20,7 +20,7 @@ mouse_hide_wait         0.01
 # EDITOR
 editor                  nvim
 input_delay             2
-#shell_integration       no-cursor
+shell_integration       no-cursor
 cursor_blink_interval   0.0
 
 # TABS
@@ -37,6 +37,6 @@ copy_on_select          no
 strip_trailing_spaces   always
 
 cursor                  #FFFFFF
-background              #010101
+#background              #101010
 active_border_color     #222222
 inactive_border_color   #222222
