--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-#macos_thicken_font      0.3
+macos_thicken_font      0.3
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
@@ -37,6 +37,6 @@ copy_on_select          no
 strip_trailing_spaces   always
 
 cursor                  #FFFFFF
-background              #101010
+#background              #101010
 active_border_color     #222222
 inactive_border_color   #222222
