--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,5 +1,5 @@
 # MacOS TWEAKS
-macos_thicken_font      0.3
+macos_thicken_font      0.27
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
@@ -30,6 +30,8 @@ tab_separator           "|"
 # FONT
 font_size               20
 font_family             IBM Plex Mono
+bold_font               IBM Plex Mono Bold
+italic_font             IBM Plex Mono Italic
 
 # CLIPBOARD
 detect_urls             yes
