--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "nvim"]
 	path = nvim
 	url = https://github.com/astrlux/nvim
+[submodule "FF"]
+	path = FF
+	url = https://github.com/astrlux/FF
