--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "nvim"]
 	path = nvim
 	url = https://github.com/astrlux/nvim
+[submodule "notes"]
+	path = notes
+	url = git@github.com:astrlux/notes.git
+[submodule "firefox"]
+	path = firefox
+	url = git@github.com:astrlux/firefox.git
