--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -30,7 +30,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               19
+font_size               18
 font_family             SF Mono
 
 # CLIPBOARD
@@ -43,25 +43,25 @@ background              #101010
 active_border_color     #222222
 inactive_border_color   #222222
 
-# inspired github
-background            #ffffff
-foreground            #3e3e3e
-cursor                #dddddd
-selection_background  #a9c1e2
-color0                #f5f5f5
-color8                #85889B
-color1                #ca1243
-color9                #de0000
-color2                #33AA34
-color10               #33AA34
-color3                #F6BB63
-color11               #f0cf06
-color4                #003e8a
-color12               #2e6cba
-color5                #55009D
-color13               #ffa29f
-color6                #0E73A4
-color14               #1cfafe
-color7                #85889B
-color15               #85889B
-selection_foreground #f4f4f4
+## inspired github
+#background            #ffffff
+#foreground            #3e3e3e
+#cursor                #dddddd
+#selection_background  #a9c1e2
+#color0                #f5f5f5
+#color8                #85889B
+#color1                #ca1243
+#color9                #de0000
+#color2                #33AA34
+#color10               #33AA34
+#color3                #F6BB63
+#color11               #f0cf06
+#color4                #003e8a
+#color12               #2e6cba
+#color5                #55009D
+#color13               #ffa29f
+#color6                #0E73A4
+#color14               #1cfafe
+#color7                #85889B
+#color15               #85889B
+#selection_foreground #f4f4f4
