--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,7 +28,7 @@ tab_bar_style           separator
 tab_separator           "|"
 
 # FONT
-font_size               17
+font_size               18
 font_family             SF Mono
 
 # CLIPBOARD
@@ -39,7 +39,7 @@ strip_trailing_spaces   always
 cursor                  #FFFFFF
 active_border_color     #222222
 inactive_border_color   #222222
-#background              #101010
+background              #101010
 
 ## inspired github
 #background            #ffffff
