--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -36,7 +36,7 @@ detect_urls             yes
 copy_on_select          no
 strip_trailing_spaces   always
 
-cursor                  #FFFFFF
+cursor                  #FFF0F0
 active_border_color     #222222
 inactive_border_color   #222222
 background              #101010
