--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,12 +1,11 @@
 # MacOS TWEAKS
-#macos_thicken_font      0.27
 macos_quit_when_last_window_closed yes
 hide_window_decorations yes
 
 # WINDOW
 map ctrl+shift+enter    new_window_with_cwd
 enable_audio_bell       no
-#background_opacity      0.81
+background_opacity      0.8
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
@@ -40,26 +39,3 @@ cursor                  #FFF0F0
 active_border_color     #222222
 inactive_border_color   #222222
 background              #101010
-
-## inspired github
-#background            #ffffff
-#foreground            #3e3e3e
-#cursor                #dddddd
-#selection_background  #a9c1e2
-#color0                #f5f5f5
-#color8                #85889B
-#color1                #ca1243
-#color9                #de0000
-#color2                #33AA34
-#color10               #33AA34
-#color3                #F6BB63
-#color11               #f0cf06
-#color4                #003e8a
-#color12               #2e6cba
-#color5                #55009D
-#color13               #ffa29f
-#color6                #0E73A4
-#color14               #1cfafe
-#color7                #85889B
-#color15               #85889B
-#selection_foreground #f4f4f4
