--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -28,7 +28,9 @@ tab_separator           "|"
 
 # === FONT ===
 font_size               16
-font_family             JetBrains Mono
+font_family             JetBrains Mono NL
+bold_font               JetBrains Mono NL Bold
+italic_font             JetBrains Mono NL Italic
 
 # === CLIPBOARD ===
 detect_urls             yes
