--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@ hide_window_decorations yes
 
 # === WINDOW ===
 enable_audio_bell       no
-#background_opacity     0.9
+#background_opacity      0.95
 window_padding_width    0
 remember_window_size    no
 initial_window_width    81c
@@ -38,4 +38,4 @@ strip_trailing_spaces   always
 cursor                  #FFFF00
 active_border_color     #222222
 inactive_border_color   #222222
-background              #090909
+#background              #090909
