--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -35,7 +35,7 @@ copy_on_select          yes
 strip_trailing_spaces   always
 
 # === COLORS ===
-cursor                  #FFFF00
+cursor                  #FFFFF0
 active_border_color     #222222
 inactive_border_color   #222222
 #background              #090909
