--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,8 +11,7 @@ bell_border_color       #000010
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
-#background_opacity      0.86
-#mouse_hide_wait         0.01
+mouse_hide_wait         0.01
 # === EDITOR ===
 editor                  nvim
 input_delay             2
