--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -23,7 +23,7 @@ tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
 font_size               19
-font_family             JetBrains Mono NL
+font_family             SF Mono
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
