--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,8 +5,8 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    90c
-initial_window_height   36c
+initial_window_width    85c
+initial_window_height   31c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
@@ -21,13 +21,15 @@ cursor_blink_interval   0.0
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
-font_size               16
-font_family             Unifont
+font_size               13
+font_family             JetBrains Mono NL
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
+#
+# KARONDA
 cursor                  #CEFAO5
 active_border_color     #222222
 bell_border_color       #000010
@@ -38,3 +40,40 @@ inactive_tab_background #000000
 inactive_tab_foreground #555555
 selection_background    #FFFFFF
 selection_foreground    #000000
+#
+# GRUVBOX
+background  #282828
+foreground  #ebdbb2
+cursor                #928374
+selection_foreground  #928374
+selection_background  #3c3836
+color0  #282828
+color8  #928374
+# red
+color1                #cc241d
+# light red
+color9                #fb4934
+# green
+color2                #98971a
+# light green
+color10               #b8bb26
+# yellow
+color3                #d79921
+# light yellow
+color11               #fabd2d
+# blue
+color4                #458588
+# light blue
+color12               #83a598
+# magenta
+color5                #b16286
+# light magenta
+color13               #d3869b
+# cyan
+color6                #689d6a
+# lighy cyan
+color14               #8ec07c
+# light gray
+color7                #a89984
+# dark gray
+color15               #928374
