--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -29,17 +29,18 @@ copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
 
-# KARONDA
-cursor                  #CEFAO5
-active_border_color     #222222
-bell_border_color       #000010
-inactive_border_color   #222222
-active_tab_background   #000000
-active_tab_foreground   #FFFFFF
-inactive_tab_background #000000
-inactive_tab_foreground #555555
-selection_background    #FFFFFF
-selection_foreground    #000000
+## KARONDA
+##cursor                  #CEFAO5
+#cursor                  none
+#active_border_color     #222222
+#bell_border_color       #000010
+#inactive_border_color   #222222
+#active_tab_background   #000000
+#active_tab_foreground   #FFFFFF
+#inactive_tab_background #000000
+#inactive_tab_foreground #555555
+#selection_background    #FFFFFF
+#selection_foreground    #000000
 
 ## DAWNFOX
 #background              #FAF4ED
@@ -74,35 +75,35 @@ selection_foreground    #000000
 #color16                 #D7827E
 #color17                 #D685AF
 
-## DUSKFOX
-#background              #232136
-#foreground              #E0DEF4
-#selection_background    #433C59
-#selection_foreground    #E0DEF4
-#url_color               #A3BE8C
-#cursor none
-#active_border_color     #569FBA
-#inactive_border_color   #4B4673
-#bell_border_color       #EA9A97
-#active_tab_background   #569FBA
-#active_tab_foreground   #191726
-#inactive_tab_background #433C59
-#inactive_tab_foreground #817C9C
-#color0                  #393552
-#color1                  #EB6F92
-#color2                  #A3BE8C
-#color3                  #F6C177
-#color4                  #569FBA
-#color5                  #C4A7E7
-#color6                  #9CCFD8
-#color7                  #E0DEF4
-#color8                  #47407D
-#color9                  #F083A2
-#color10                 #B1D196
-#color11                 #F9CB8C
-#color12                 #65B1CD
-#color13                 #CCB1ED
-#color14                 #A6DAE3
-#color15                 #E2E0F7
-#color16                 #EA9A97
-#color17                 #EB98C3
+# DUSKFOX
+background              #232136
+foreground              #E0DEF4
+selection_background    #433C59
+selection_foreground    #E0DEF4
+url_color               #A3BE8C
+cursor none
+active_border_color     #569FBA
+inactive_border_color   #4B4673
+bell_border_color       #EA9A97
+active_tab_background   #569FBA
+active_tab_foreground   #191726
+inactive_tab_background #433C59
+inactive_tab_foreground #817C9C
+color0                  #393552
+color1                  #EB6F92
+color2                  #A3BE8C
+color3                  #F6C177
+color4                  #569FBA
+color5                  #C4A7E7
+color6                  #9CCFD8
+color7                  #E0DEF4
+color8                  #47407D
+color9                  #F083A2
+color10                 #B1D196
+color11                 #F9CB8C
+color12                 #65B1CD
+color13                 #CCB1ED
+color14                 #A6DAE3
+color15                 #E2E0F7
+color16                 #EA9A97
+color17                 #EB98C3
