--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -43,7 +43,7 @@ strip_trailing_spaces   always
 #selection_foreground    #000000
 
 background #111111
-foreground #fff8e7
+foreground #fcfad4
 cursor none
 selection_background #464d91
 color0 #919191
