--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -5,43 +5,43 @@ hide_window_decorations yes
 enable_audio_bell       no
 window_padding_width    0
 remember_window_size    no
-initial_window_width    80c
+initial_window_width    90c
 initial_window_height   40c
 enabled_layouts fat:bias=70;full_size=1;mirrored=false
 map ctrl+shift+enter    new_window_with_cwd
 scrollback_lines        900
-mouse_hide_wait         0.01
+#mouse_hide_wait         0.01
 #background_opacity      0.7
 # === EDITOR ===
 editor                  nvim
-input_delay             2
-shell_integration       no-cursor
-cursor_blink_interval   0.18
+input_delay             1
+#shell_integration       no-cursor
+cursor_blink_interval   0.0
 # === TABS ===
 tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
 font_size               16
-font_family             Input
+font_family             Unifont
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
 strip_trailing_spaces   always
 # === COLORS ===
 
-## KARONDA
-##cursor                  #CEFAO5
-#cursor                  none
-#active_border_color     #222222
-#bell_border_color       #000010
-#inactive_border_color   #222222
-#active_tab_background   #000000
-#active_tab_foreground   #FFFFFF
-#inactive_tab_background #000000
-#inactive_tab_foreground #555555
-#selection_background    #FFFFFF
-#selection_foreground    #000000
+#KARONDA
+cursor                  none
+active_border_color     #222222
+bell_border_color       #000010
+inactive_border_color   #222222
+active_tab_background   #000000
+active_tab_foreground   #FFFFFF
+inactive_tab_background #000000
+inactive_tab_foreground #555555
+selection_background    #FFFFFF
+selection_foreground    #000000
 
+#JELLYBEANS
 background #141414
 foreground #e8e8d6
 cursor none
