--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,7 +22,7 @@ tab_bar_style           separator
 tab_separator           "|"
 # === FONT ===
 font_size               16
-font_family             Unifont
+font_family             Input
 # === CLIPBOARD ===
 detect_urls             yes
 copy_on_select          yes
